Fix java7 test error